# MiniMix

./: .gitignore  CLAUDE.md  README.md  annotation.js  floating-toolbar.js  image-item.js  index.html  main.js  package-lock.json  package.json  slider-widget.js  stitch-engine.js  style.css  undo-manager.js  vite.config.js
.github/workflows/: release.yml
.mimocode/plans/: 1782455977766-playful-eagle.md  1782464513877-lucky-eagle.md
docs/snippets/: draw-size-label.js
images/: minimix.af
scripts/: check-i18n.js  generate-third-party-licenses.mjs
src/: theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsi
src/i18n/: i18n.js
src/i18n/locales/: en.js  zh-CN.js
